# gRPC-Redis

PrProd/: CMakeLists.txt  main.cpp  set_async.cpp  set_balance_info.cpp  set_sync_one.cpp
PrProd/boost/: boost_redis.cpp
PrProd/cls_bl/: callers.h  get_balance_info_caller.cpp  get_balance_tech_info_caller.cpp  set_balance_info_caller.cpp
PrProd/cls_core/: app.cpp  app.h  atomic_operations.hpp  caller_base.cpp  caller_base.h  grpc_server.cpp  grpc_server.h  redis_pool.cpp  redis_pool.h
PrProd/proto/: CLS.proto
asio.redis.drv/: callers.h
asio.redis.drv/src_asio/: CMakeLists.txt  boost_asio.cpp  callback_server.cpp  cpp20_grpc.cpp  cpp20_intro.cpp  main.cpp  sync_server.cpp
asio.redis.drv/src_asio/cmakes/: CMakeLists.full  CMakeLists.nw3.txt  CMakeLists_nw2.txt
asio.redis.drv/src_asio/old/: boost_spawn.cpp  coro_test.cpp
asio.redis.drv/src_async1/: CMakeLists.txt  ReadMe.md
asio.redis.drv/src_coro.ytodel/: CMakeLists.txt  corostd_server.cpp
coro_test/: CMakeLists.txt  coro_curl_client.cpp  coro_example.cpp  curl_client.cpp
protos/: BalanceStorageRPC.proto
redis_plus_plus_driver/src_async/: async_client3.cpp  async_server.docs.cc
redis_plus_plus_driver/src_async_redis_async/: CMakeLists.txt  ReadMe.md  async_create2.cpp  async_server.cpp  sync_create.cpp
redis_plus_plus_driver/src_async_redis_coro_last/: CMakeLists.txt  ReadMe.md  async_create.cpp  async_create2.cpp  async_read.cpp  callback_server.cpp  corolib_server.cpp  corostd2_server.cpp  corostd_server.cpp  corostd_server.cpp.bad  grpc_callback_client.cpp  grpc_callback_client_once.cpp  grpc_callback_server.cpp  read_one.cpp  sync_create.cpp
redis_plus_plus_driver/src_async_redis_coro_last/proto/: CLS.proto
redis_plus_plus_driver/src_async_redis_sync/: async_read.cpp  async_server.cpp
redis_plus_plus_driver/src_async_redis_sync_mt/: async_server.cpp
redis_plus_plus_driver/src_sync/: adl  adl.cpp  client.cpp  gen.sh
src_async/: CMakeLists.txt  async_client1.cpp  async_client2.cpp  async_server.cpp  async_server_hoock.cc
src_async_redis_async/: CMakeLists.txt
src_async_redis_coro/: CMakeLists.txt  ReadMe.md  callback_server.cpp
src_async_redis_cppcorolib/: CMakeLists.txt  ReadMe.md  async_create.cpp  async_create2.cpp  async_read.cpp  async_server.cpp
src_async_redis_sync/: CMakeLists.txt  async_create.cpp  async_server.cpp  sync_create.cpp
src_async_redis_sync_mt/: ReadMe.md  async_server.cpp
src_sync/: Makefile  server.cpp
